fixed more indentation. products.php uses get request, filter list updates based on selected items.

--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -34,7 +34,7 @@
           <login-card id="login"></login-card>
           <register-card id="register"></register-card>
           <search-card></search-card>
-          <filter-card></filter-card>
+          <filter-card filter="{{filters}}"></filter-card>
         </div>
       </paper-header-panel>
       <paper-header-panel main>
