--- a/components/cart-control.html
+++ b/components/cart-control.html
@@ -16,9 +16,9 @@
       }
     </style>
     
-    <paper-icon-button on-tap="showCart" icon="shopping-cart"></paper-icon-button>
+    <paper-icon-button on-tap="show" icon="shopping-cart"></paper-icon-button>
     
-    <paper-dialog modal id="dialog" opened="{{showing}}" class="layout vertical">
+    <paper-dialog modal id="dialog" opened="{{visible}}" class="layout vertical">
       <h2>Shopping Cart</h2>
       
       <div class="buttons">
@@ -32,17 +32,17 @@
     Polymer({
       is: "cart-control",
       properties: {
-        showing: {
+        visible: {
           type: Boolean,
           default: false,
           notify: true
         }
       },
-      showCart: function() {
-        this.showing = true;
+      show: function() {
+        this.visible = true;
       },
       close: function() {
-        this.showing = false;
+        this.visible = false;
       }
     });
   </script>
