--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="inventory-card.html">
@@ -25,6 +25,9 @@
       }
     </style>
     <style is="custom-style">
+      paper-toolbar {
+        --paper-toolbar-sm-height: 64px;
+      }
     </style>
     
     <paper-drawer-panel id="drawer">
@@ -39,13 +42,13 @@
           <filter-card filter="{{filters}}"></filter-card>
         </div>
       </paper-header-panel>
-      <paper-header-panel main>
+      <paper-scroll-header-panel main>
         <paper-toolbar>
           <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
           <div class="title">Simple Store</div>
           
           <paper-tabs id="tabs" class="end-justified" selected="{{activeTab}}">
-              <paper-tab>SHOP</paper-tab>
+              <paper-tab>BROWSE</paper-tab>
               <template is="dom-if" if="{{isAdmin}}">
                 <paper-tab>INVENTORY</paper-tab>
               </template>
@@ -56,6 +59,7 @@
           </template>
         </paper-toolbar>
         
+        <div class="content">
         <iron-pages selected="{{activeTab}}">
           <div>
             <item-tray filterList="{{filters}}"></item-tray>
@@ -68,9 +72,9 @@
           </template>
           
         </iron-pages>
+        </div>
         
-        
-      </paper-header-panel>
+      </paper-scroll-header-panel>
     </paper-drawer-panel>
     
   </template>
@@ -125,6 +129,7 @@
         } else {
           this.isStaff = false;
           this.isManager = false;
+          this.activeTab = 0;
         }
       },
       showRegisterCard: function() {
