--- a/components/inventory-card.html
+++ b/components/inventory-card.html
@@ -37,19 +37,40 @@
       
     </style>
     
-    <form is="iron-form"  id="getInventoryForm" method="post" action="../src/getInventory.php">
+    <form 
+      is="iron-form"
+      id="getInventoryForm" 
+      method="post" 
+      action="../src/getInventory.php">
+      
       <input type="hidden" name="getInventory"></input>
     </form>
-    <form is="iron-form" id="updateInventoryForm" method="post" action="../src/updateInventory.php">
+    
+    <form 
+      is="iron-form"
+      id="updateInventoryForm"
+      content-type="application/json"
+      action="../src/updateInventory.php">
       
+      <input type="hidden" name="itemToUpdate" value="{{newItem}}"></input>
     </form>
+    
+    <paper-dialog id="affirmReloadDialog">
+      <h2>You've modified items...</h2>
+      Are you sure you want to refresh the list of items?
+      <div class="buttons">
+        <paper-button dialog-dismiss>Please, dont</paper-button>
+        <paper-button dialog-confirm>Yep</paper-button>
+      </div>
+    </paper-dialog>
     
     <paper-scroll-header-panel fixed>
       <paper-toolbar>
+        <paper-icon-button icon="refresh" on-tap="reloadItems"></paper-icon-button>
         <div class="flex title">Inventory</div>
         <div class="flex"></div>
-        <paper-icon-button icon="add"></paper-icon-button>
-        <paper-icon-button icon="refresh"></paper-icon-button>
+        <paper-icon-button icon="add" on-tap="addItem"></paper-icon-button>
+        <paper-icon-button icon="undo" on-tap="restoreItem"></paper-icon-button>
       </paper-toolbar>
   
       <div class="content">
@@ -71,6 +92,7 @@
                 <paper-input 
                   id="quantity"
                   label="Quantity"
+                  type="number"
                   value="{{item.quantity}}"
                   disabled="{{!item.editing}}"
                   always-float-label>
@@ -78,6 +100,7 @@
                   
                 <paper-input 
                   id="price"
+                  type="number"
                   label="Price"
                   value="{{item.price}}"
                   disabled="{{!item.editing}}"
@@ -107,6 +130,7 @@
                 <paper-input 
                   id="price"
                   label="Discount"
+                  type="number"
                   value="{{item.discount}}"
                   disabled="{{!item.editing}}"
                   max-length="3"
@@ -130,15 +154,8 @@
               </paper-textarea>
             
             <div class="layout vertical around-justified">
-              <paper-icon-button 
-                toggles
-                active="{{item.editing}}"
-                icon="create">
-              </paper-icon-button>
-              <paper-icon-button 
-                on-tap="{{removeItem}}"
-                icon="delete">
-              </paper-icon-button>
+              <paper-icon-button on-tap="editItem" icon="{{item.icon}}"></paper-icon-button>
+              <paper-icon-button on-tap="removeItem" icon="delete"></paper-icon-button>
             </div>
             
           </paper-material>
@@ -158,16 +175,39 @@
           type: Array,
           notify: true,
           value: []
-        }
+        },
+        filterList: {
+          type: Array,
+          value: [],
+          notify: true
+        },
+        deletedItems: {
+          type: Array,
+          value: []
+        },
+        newItem: {
+          type: Object,
+          value: {}
+        },
+        rawItem: {
+          type: Object,
+          value: {
+            "new": true,
+            "icon": "create"
+          },
+          readonly: true
+        },
+        itemEditing: false
       },
       listeners: {
-        'getInventoryForm.iron-form-response': 'refreshInventory',
-        'updateInventoryForm.iron-form-response': 'notifyOfUpdate'
+        'getInventoryForm.iron-form-response': 'onRefreshInventory',
+        'updateInventoryForm.iron-form-response': 'onUpdateResponse',
+        'affirmReloadDialog.iron-overlay-closed': 'onReloadDialogResponse'
       },
       ready: function() {
         this.$.getInventoryForm.submit();
       },
-      refreshInventory: function(e) {
+      onRefreshInventory: function(e) {
         if( e.detail.response && e.detail.response.result ) {
           if( e.detail.response.result == "success") {
             this.inventory = e.detail.response.items;
@@ -176,12 +216,61 @@
             console.log("error requesting inventory");
           }
         } else {
-          console.log("bad inventory page")
+          console.log("bad inventory page");
         }
       },
-      notifyOfUpdate: function(e) {
+      addItem: function(e) {
+        this.unshift('inventory', this.rawItem);
+      },
+      removeItem: function(e) {
+        this.deletedItems.push(e.model.get('item'));
+        this.splice('inventory', e.model.get('item.index'), 1);
+        console.log("model: ", e.model.get('item'));
+      },
+      restoreItem: function(e) {
+        if( this.deletedItems.length )
+          this.unshift('inventory', this.deletedItems.pop());
+      },
+      reloadItems: function() {
+        var newItems = false;
         
-      }
+        for( var i=0; i<this.inventory.length && !newItems; i++)
+          if( this.inventory[i].new )
+            newItems = true;
+        
+        console.log("newItems", newItems)
+        
+        if(!newItems)
+          this.$.getInventoryForm.submit();
+        else {
+          this.$.affirmReloadDialog.opened = true;
+        }
+          
+      },
+      editItem: function(e) {
+        var model = e.model;
+        
+        if( model.get('item.edited')  && model.get('item.editing')) {
+          model.set('item.editing', false);
+          this.itemEditing = false;
+          this.newItem = JSON.stringify(model.get('item'));
+          console.log("item:", this.newItem, "submitting form");
+          this.$.updateInventoryForm.submit();
+          model.set('item.icon', 'create');
+        } else {
+          this.itemEditing = true;
+          model.set('item.edited', true);
+          model.set('item.editing', true);
+          model.set('item.icon', 'save');
+        }
+      },
+      onReloadDialogResponse: function(e) {
+        if( e.detail.confirmed )
+          this.$.getInventoryForm.submit();
+      },
+      onUpdateResponse: function(e) {
+        console.log("product update response: ", e.detail.response);
+      },
     });
       
   </script>
