--- a/components/item-tray.html
+++ b/components/item-tray.html
@@ -47,7 +47,7 @@
       console.log("updatingProducts");
       this.updateProducts([]);
     },
-    updateProducts: function(newList, oldList) {
+    updateProducts: function(newList, oldList, forceWithNoParams) {
       console.log("list changed");
       
       if(this.$.ajax && newList && newList.length > 0) {
@@ -57,7 +57,12 @@
         this.$.ajax.params = {'filter': ['']};
         console.log(this.$.ajax.params);
         this.$.ajax.generateRequest();
+      } else if(forceWithNoParams) {
+        console.log("forcing refresh");
+        this.$.ajax.params = {'filter': ['']};
+        this.$.ajax.generateRequest();
       } else {
+        console.log(this.$.ajax, newList);
         console.log("ajax not ready or list null");
       }
     },
@@ -74,6 +79,11 @@
       } else {
         console.log("unexpected response");
       }
+    },
+    refresh: function() {
+      console.log("refreshing products");
+
+      this.updateProducts(this.filterList, this.filterList, true);
     }
     });
 
