fixed zero price bug

--- a/components/inventory-card.html
+++ b/components/inventory-card.html
@@ -111,10 +111,10 @@
                 </paper-input>
                   
                 <paper-input 
-                  id="price"
+                  id="cost"
                   type="number"
-                  label="Price"
-                  value="{{item.price}}"
+                  label="Cost"
+                  value="{{item.cost}}"
                   disabled="{{!item.editing}}"
                   always-float-label>
                   <div prefix>$</div>
@@ -140,7 +140,7 @@
                 </paper-input>
                   
                 <paper-input 
-                  id="price"
+                  id="discount"
                   label="Discount"
                   type="number"
                   value="{{item.discount}}"
