reverted to plain paper-header-panel to fix shopping cart being overshadowed

--- a/components/inventory-card.html
+++ b/components/inventory-card.html
@@ -25,9 +25,9 @@
     <style is="custom-style">
       paper-scroll-header-panel {
         position: absolute;
-        top: 64px;
+        top: 0px;
         right: 0px;
-        bottom: 0;
+        bottom: 0px;
         left: 0px;
       }
       
