--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="inventory-card.html">
@@ -42,7 +42,7 @@
           <filter-card filter="{{filters}}"></filter-card>
         </div>
       </paper-header-panel>
-      <paper-scroll-header-panel main>
+      <paper-header-panel main>
         <paper-toolbar>
           <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
           <div class="title">Simple Store</div>
@@ -74,7 +74,7 @@
         </iron-pages>
         </div>
         
-      </paper-scroll-header-panel>
+      </paper-header-panel>
     </paper-drawer-panel>
     
   </template>
