--- a/components/item-card.html
+++ b/components/item-card.html
@@ -60,6 +60,9 @@
       },
       computePrice: function(cost, discount) {
         return (cost - cost*discount);
+      },
+      addToCart: function() {
+        this.fire('add-to-cart', {"pid": this.data.pid});
       }
     });
   </script>
