--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
@@ -10,11 +11,11 @@
 
 <link rel="import" href="inventory-card.html">
 <link rel="import" href="register-card.html">
+<link rel="import" href="order-card.html">
 <link rel="import" href="cart-control.html">
 <link rel="import" href="filter-card.html">
 <link rel="import" href="search-card.html">
 <link rel="import" href="login-card.html">
-<link rel="import" href="item-tray.html">
 <link rel="import" href="item-card.html">
 
 <dom-module id="app-shell">
@@ -25,10 +26,22 @@
       }
     </style>
     <style is="custom-style">
-      paper-toolbar {
-        --paper-toolbar-sm-height: 64px;
-      }
     </style>
+    
+   <form 
+      is="iron-form"
+      id="productForm"
+      content-type="application/json"
+      action="../src/products.php">
+      
+      <input type="hidden" name="filter" value="{{filters}}"></input>
+    </form>
+    
+    <template is="dom-if" if="{{loggedIn}}">
+      <cart-control visible="{{cartOpen}}"></cart-control>
+    </template>
+    
+    <login-card id="login"></login-card>
     
     <paper-drawer-panel id="drawer">
       <paper-header-panel drawer>
@@ -36,7 +49,15 @@
           <div class="title">Menu</div>
         </paper-toolbar>
         <div class="layout vertical center-justified">
-          <login-card id="login"></login-card>
+          
+          <paper-icon-item on-tap="showLoginCard">
+            <iron-icon icon="account-circle" item-icon></iron-icon>
+            <paper-item-body two-line>
+              <div>{{loginLabel}}</div>
+              <div secondary>{{loginLevel}}</div>
+            </paper-item-body>
+          </paper-icon-item>
+          
           <register-card id="register"></register-card>
           <search-card></search-card>
           <filter-card filter="{{filters}}"></filter-card>
@@ -52,22 +73,33 @@
               <template is="dom-if" if="{{isAdmin}}">
                 <paper-tab>INVENTORY</paper-tab>
               </template>
+              <template is="dom-if" if="{{isAdmin}}">
+                <paper-tab>ORDERS</paper-tab>
+              </template>
           </paper-tabs>
           
           <template is="dom-if" if="{{loggedIn}}">
-            <cart-control></cart-control>
+            <paper-icon-button on-tap="showCart" icon="shopping-cart"></paper-icon-button>
           </template>
+          
         </paper-toolbar>
         
         <div class="content">
         <iron-pages selected="{{activeTab}}">
-          <div>
+          <!--<div>
             <item-tray stale="{{reloadItems}}" filterList="{{filters}}"></item-tray>
+          </div>-->
+          <div class="layout horizontal center-justified wrap">
+            <template is="dom-repeat" items="{{products}}">
+              <item-card on-add-to-cart="addItemToCart" data="{{item}}"></item-card>
+            </template>
           </div>
-          
           <template id="invTemplate" is="dom-if" if="{{isAdmin}}">
             <div>
-              <inventory-card on-stale-product="staleItems"></inventory-card>
+              <inventory-card on-stale-product="updateProducts"></inventory-card>
+            </div>
+            <div>
+              <order-card></order-card>
             </div>
           </template>
           
@@ -83,6 +115,10 @@
     Polymer({
       is: "app-shell",
       properties: {
+        products: {
+          type: Array,
+          notify: true
+        },
         loggedIn: {
           type: Boolean,
           readyOnly: true,
@@ -90,7 +126,11 @@
         },
         filters: {
           type: Array,
-          value: [],
+          notify: true
+        },
+        cartOpen: {
+          type: Boolean,
+          value: false,
           notify: true
         },
         isStaff: {
@@ -116,12 +156,25 @@
           type: Boolean,
           value: false,
           notify: true
+        },
+        loginLabel: {
+          type: String,
+          notify: true
+        },
+        loginLevel: {
+          type: String,
+          notify: true
         }
       },
       listeners: {
         'login.login-changed': 'setLogin',
         'login.register': 'showRegisterCard',
-        'register.register-success': 'showLoginCard'
+        'register.register-success': 'showLoginCard',
+        'productForm.iron-form-response': 'onUpdateResponse'
+      },
+      ready: function() {
+        this.loginLabel = "Login";
+        this.$.productForm.submit();
       },
       setLogin: function(e) {
         console.log("login update:", e.detail);
@@ -130,10 +183,13 @@
         if(this.loggedIn) {
           this.isStaff = e.detail.isStaff;
           this.isManager = e.detail.isManager;
+          this.loginLabel = e.detail.loginLabel;
+          this.loginLevel = e.detail.loginLevel;
         } else {
           this.isStaff = false;
           this.isManager = false;
-          this.activeTab = 0;
+          this.$.tabs.select(0);
+          this.loginLabel = "Login";
         }
       },
       showRegisterCard: function() {
@@ -141,17 +197,29 @@
         this.$.register.visible = true;
       },
       showLoginCard: function(e) {
-        if(e.detail.registered)
-          this.$.login.registerVisible = false;
-        this.$.login.visible = true;
+        this.$.login.authAction();
       },
       computeAdmin: function(isStaff, isManager) {
         console.log("isAdmin:", isStaff || isManager);
         return isStaff || isManager;
       },
-      staleItems: function(e) {
-        console.log("stale items, refreshing");
-        document.querySelector('item-tray').refresh();
+      updateProducts: function() {
+        this.$.productForm.submit()
+      },
+      onUpdateResponse: function(e) {
+        if( e.detail.response && e.detail.response.result ) {
+          if(e.detail.response.result == "success") {
+            this.products = e.detail.response.products;
+            console.log("new products:", this.products);
+          } else {
+            console.log("app-shell - product update error:",e.detail.response.result);
+          }
+        } else {
+          console.log("app-shell - no response on product update");
+        }
+      },
+      showCart: function() {
+        this.cartOpen = true;
       }
     });
   </script>
